...
                    android:name="com.openclassrooms.realestatemanager.ui.fragments.MainNavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:defaultNavHost="true" />

                <ProgressBar
                    android:id="@+id/loading_properties"
                    android:theme="@style/ProgressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="visible" />
                <TextView
                    android:id="@+id/no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_property_to_display"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/colorPrimaryDark"
...
