<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/button_container"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:padding="1dp"
    android:background="@drawable/segmented_control_background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tool_bar">

    <Button
        android:id="@+id/list_view_button"
        style="@style/SegmentedControlButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/button_list_title"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/map_view_button"
        android:layout_width="0dp"
        style="@style/SegmentedControlButtonStyle"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/button_map_title"
        />
</LinearLayout>